<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map_view"/>

    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/list_view"/>

    <item
        android:id="@+id/nav_workmates"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/workmates"/>
</menu>